# IsaacLabExtensionTemplate

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  README_TEMPLATE.md  pyproject.toml  rename_template.py  setup.py  setup_environment.sh
config/: extension.toml
docker/: Dockerfile  docker-compose.yaml
docs/: CHANGELOG.rst  README.md
ext_template/tasks/: __init__.py
ext_template/tasks/locomotion/velocity/config/anymal_d/: rough_env_cfg.py
ext_template/tasks/locomotion/velocity/mdp/: rewards.py
exts/ext_asset_template/: setup.py
exts/ext_asset_template/config/: extension.toml
exts/ext_asset_template/data/: humanoid.usd
exts/ext_asset_template/docs/: CHANGELOG.rst
exts/ext_asset_template/ext_asset_template/: __init__.py  humanoid.py
exts/ext_template/ext_template/assets/: __init__.py
exts/ext_template/ext_template/assets/assets/: __init__.py  anymal.py  humanoid.py
exts/ext_template/ext_template/assets/data/: humanoid_instanceable.usd
exts/ext_template/ext_template/tasks/direct/: __init__.py
exts/ext_template/ext_template/tasks/direct/anymal_c/: anymal_c_env_cfg.py
exts/ext_template/ext_template/tasks/manager_based/: __init__.py
orbit/ext_template/: __init__.py  hello_world.py  ui_example.py  ui_extension_example.py
orbit/ext_template/scripts/: async_tasks.py  hello_world.py  play.py  train.py
orbit/ext_template/tasks/: __init__.py
orbit/ext_template/tasks/anymal_d_flat/: __init__.py  agent.py  environment.py
orbit/ext_template/tasks/anymal_d_flat/mdp/: __init__.py  actions.py  commands.py  curriculums.py  observations.py  randomizations.py  rewards.py  scenes.py  terminations.py
orbit/ext_template/tasks/locomotion/velocity/: velocity_env_cfg.py
orbit/ext_template/tasks/mdp/: __init__.py
orbit/ext_template/tasks/robot/: __init__.py  flat_env_cfg.py
orbit/ext_template/tasks/robot/agents/: rsl_rl_cfg.py
scripts/: list_envs.py  rename_template.py
scripts/rsl_rl/: async_tasks.py  cli_args.py  play.py  train.py
source/ext_template/: setup.py
source/ext_template/config/: extension.toml
source/ext_template/ext_template/: ui_extension_example.py
source/ext_template/ext_template/assets/: __init__.py
source/ext_template/ext_template/assets/assets/: anymal.py
source/ext_template/ext_template/tasks/: __init__.py
(+30 files in other folders)
