# This section defines the build system requirements
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


# Project metadata
[project]
name = "ext_template"
version = "0.1.0"
requires-python = ">=3.10"
description = "Extension template for orbit"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["isaac sim", "orbit", "extension", "template"]
classifiers = [
  "Programming Language :: Python :: 3",
]
authors = [
  {name = "Nico Burger", email = "nburger@theaiinstitute.com"},
]
maintainers = [
  {name = "Nico Burger", email = "nburger@theaiinstitute.com"},
]


# Tool dependent subtables
[tool.setuptools]
py-modules = ['orbit']