# This section defines the build system requirements
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


# Project metadata
[project]
version = "0.1.0"
name = "ext_template"  # TODO
description = "Extension Template for Orbit"  # TODO
keywords = ["extension", "template", "orbit"]  # TODO
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
  "Programming Language :: Python :: 3",
]
authors = [
  {name = "Nico Burger", email = "nburger@theaiinstitute.com"},  # TODO
]
maintainers = [
  {name = "Nico Burger", email = "nburger@theaiinstitute.com"},  # TODO
]


# Tool dependent subtables
[tool.setuptools]
py-modules = [
  'orbit'
]  # TODO, add modules required for your extension
